--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,16 +14,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginMainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".StudentLoginActivity" />
-        <activity android:name=".StudentRegistryActivity" />
-        <activity android:name=".StudentDshboardActivity"></activity>
+        <activity android:name=".StudentDshboardActivity" />
+        <activity android:name=".LoginMainActivity" />
+        <activity android:name=".RegisterMainActivity" />
+        <activity android:name=".StudentRegisterActivity" />
+        <activity android:name=".FacultyRegisterActivity"></activity>
     </application>
 
 </manifest>
