--- a/FinalYearProjectJSP/nbproject/project.properties
+++ b/FinalYearProjectJSP/nbproject/project.properties
@@ -79,6 +79,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=FinalYearProj.war
+war.name=FinalYearProjectJSP.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
