login servlet addded

--- a/FinalYearProjectJSP/web/WEB-INF/web.xml
+++ b/FinalYearProjectJSP/web/WEB-INF/web.xml
@@ -1,12 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
-        <servlet-name>Register</servlet-name>
-        <servlet-class>RegisterAndroid.Register</servlet-class>
+        <servlet-name>StudentRegister</servlet-name>
+        <servlet-class>RegisterAndroid.StudentRegister</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>FacultyRegister</servlet-name>
+        <servlet-class>RegisterAndroid.FacultyRegister</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Login</servlet-name>
+        <servlet-class>RegisterAndroid.Login</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>Register</servlet-name>
-        <url-pattern>/Register</url-pattern>
+        <servlet-name>StudentRegister</servlet-name>
+        <url-pattern>/StudentRegister</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>FacultyRegister</servlet-name>
+        <url-pattern>/FacultyRegister</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Login</servlet-name>
+        <url-pattern>/Login</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
