--- a/FinalYearProjectJSP/web/WEB-INF/web.xml
+++ b/FinalYearProjectJSP/web/WEB-INF/web.xml
@@ -16,6 +16,10 @@
         <servlet-name>UploadData</servlet-name>
         <servlet-class>Upload.UploadData</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>PlacementData</servlet-name>
+        <servlet-class>Placement.PlacementData</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>StudentRegister</servlet-name>
         <url-pattern>/StudentRegister</url-pattern>
@@ -31,6 +35,10 @@
     <servlet-mapping>
         <servlet-name>UploadData</servlet-name>
         <url-pattern>/UploadData</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PlacementData</servlet-name>
+        <url-pattern>/PlacementData</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
