--- a/FinalYearProjectJSP/web/WEB-INF/web.xml
+++ b/FinalYearProjectJSP/web/WEB-INF/web.xml
@@ -20,6 +20,10 @@
         <servlet-name>PlacementData</servlet-name>
         <servlet-class>Placement.PlacementData</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Adminlogin</servlet-name>
+        <servlet-class>Admin.Adminlogin</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>StudentRegister</servlet-name>
         <url-pattern>/StudentRegister</url-pattern>
@@ -39,6 +43,10 @@
     <servlet-mapping>
         <servlet-name>PlacementData</servlet-name>
         <url-pattern>/PlacementData</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Adminlogin</servlet-name>
+        <url-pattern>/Adminlogin</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
