fac upload notes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
             android:name=".FacultyDashboardActivity"
             android:label="@string/title_activity_faculty_dashboard"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".FacNotesActivity"></activity>
+        <activity android:name=".FacNotesActivity" />
     </application>
 
 </manifest>
