--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
             android:label="@string/title_activity_faculty_dashboard"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".FacNotesActivity" />
+        <activity android:name=".FacMarksActivity"></activity>
     </application>
 
 </manifest>
