--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,8 @@
         <activity android:name=".AboutStudActivity" />
         <activity android:name=".AboutFacActivity" />
         <activity android:name=".StudNotesActivity" />
-        <activity android:name=".ListViewActivity"></activity>
+        <activity android:name=".ListViewActivity" />
+        <activity android:name=".StudentAggregateActivity"></activity>
     </application>
 
 </manifest>
