--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,10 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
     compile 'com.github.markushi:circlebutton:1.1'
+    compile 'com.google.firebase:firebase-messaging:11.0.4'
 }
+
+apply plugin: 'com.google.gms.google-services'
 
 
 
