--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile 'com.android.support:design:26.1.0'
     compile 'com.github.markushi:circlebutton:1.1'
     compile 'com.google.firebase:firebase-messaging:11.0.4'
+    compile 'com.android.support:support-annotations:27.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
