--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile 'com.github.markushi:circlebutton:1.1'
     compile 'com.google.firebase:firebase-messaging:11.0.4'
     compile 'com.android.support:support-annotations:27.1.0'
+    compile 'de.hdodenhof:circleimageview:2.2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
