--- a/FinalYearProjectJSP/nbproject/project.properties
+++ b/FinalYearProjectJSP/nbproject/project.properties
@@ -30,6 +30,7 @@ endorsed.classpath=\
 excludes=
 file.reference.cos-multipart.jar=lib\\cos-multipart.jar
 file.reference.mysql-connector-java-5.1.2.jar=lib\\mysql-connector-java-5.1.2.jar
+file.reference.opencv-310.jar=lib/opencv-310.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -40,7 +41,8 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.2.jar}:\
-    ${file.reference.cos-multipart.jar}
+    ${file.reference.cos-multipart.jar}:\
+    ${file.reference.opencv-310.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
